; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/ar7/extr_irq.c_ar7_unmask_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/ar7/extr_irq.c_ar7_unmask_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ar7_irq_base = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @ar7_unmask_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar7_unmask_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @ar7_irq_base, align 4
  %5 = sub i32 %3, %4
  %6 = urem i32 %5, 32
  %7 = shl i32 1, %6
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @ar7_irq_base, align 4
  %10 = sub i32 %8, %9
  %11 = call i32 @ESR_OFFSET(i32 %10)
  %12 = call i32 @REG(i32 %11)
  %13 = call i32 @writel(i32 %7, i32 %12)
  ret void
}

declare dso_local i32 @writel(i32, i32) #1

declare dso_local i32 @REG(i32) #1

declare dso_local i32 @ESR_OFFSET(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
